--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ section{
 
 .header .header-1 .search-form label{
     font-size: 2.5rem;
-    padding-right: 1.5rem;
+    padding-left: 1.5rem;
     color:var(--black);
     cursor: pointer;
 }
@@ -334,7 +334,7 @@ section{
 
 .icons-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(18.5rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(18.35rem, 1fr));
     gap:1.5rem;
 }
 
