--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap'); */
+
+@font-face {
+    font-family: "Tajawal";
+    src: url(../Tajawal/Tajawal-Medium.ttf);
+}
 
 :root{
     --green:#27ae60;
@@ -11,7 +16,7 @@
 }
 
 *{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Tajawal', sans-serif;
     margin:0; padding:0;
     box-sizing: border-box;
     outline: none; border:none;
